[tool.poetry]
name = "coordinates"
version = "0.1.0"
description = "A programme that calculates coordinates method. Includes planes, vectors, points and operations with them such as finding distance or angle"
authors = ["ibuke3"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
